[package]
name = "bevy_gizmo_log"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app = "0.14.1"
bevy_color = "0.14.1"
bevy_ecs = "0.14.1"
bevy_gizmos = "0.14.1"
bevy_log = "0.14.1"
bevy_math = "0.14.1"
bevy_transform = "0.14.1"
bevy_utils = "0.14.1"
ron = "0.8.1"
serde = "1.0"
tracing-log = "0.2"

# TODO: make optional
nalgebra = { version = "0.33.0", features = ["convert-glam027"]}

[dev-dependencies]
bevy_internal = "0.14.1"
