[package]
name = "bevy_gizmo_log"
version = "0.2.0"
keywords = ["bevy", "logging"]
description = "Render bevy gizmos by logging them"
categories = ["game-development", "development-tools::debugging"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/370417/bevy_gizmo_log"

[features]
default = ["bevy"]
bevy = [
    "dep:bevy_app",
    "dep:bevy_ecs",
    "dep:bevy_gizmos",
    "dep:bevy_log",
    "dep:bevy_transform",
]
convert-nalgebra033 = ["dep:nalgebra"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bevy_color = { version = "0.15.0-rc.3", features = ["serialize"]}
bevy_math = { version = "0.15.0-rc.3", features = ["serialize"] }
ron = "0.8.1"
serde = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.2"

bevy_app = { version = "0.15.0-rc.3", optional = true }
bevy_ecs = { version = "0.15.0-rc.3", optional = true }
bevy_gizmos = { version = "0.15.0-rc.3", optional = true }
bevy_log = { version = "0.15.0-rc.3", optional = true }
bevy_transform = { version = "0.15.0-rc.3", optional = true }

nalgebra = { version = "0.33.2", features = ["convert-glam029"], optional = true }

[dev-dependencies]
approx = "0.5.1"
bevy = "0.15.0-rc.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
